# hicorder

./: .gitignore  LICENSE  NOTICE  README.md  SECURITY.md  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: ci.yml  release.yml
docs/: ARCHITECTURE.md  CONTINUATION.md  DECISIONS.md  MINIMAX.md  PROVIDERS.md  ROADMAP.md  SIGNING.md
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/resources/: .gitkeep
src-tauri/src/: lib.rs  main.rs  migrate.rs  net.rs  scheduler.rs  tray.rs
src-tauri/src/attio/: mod.rs
src-tauri/src/audio/: mic.rs  mod.rs  opus.rs  recorder.rs  system.rs  wav.rs
src-tauri/src/commands/: mod.rs
src-tauri/src/encode/: mod.rs
src-tauri/src/logs/: mod.rs
src-tauri/src/meetings/: mod.rs
src-tauri/src/settings/: mod.rs
src-tauri/src/storage/: mod.rs
src-tauri/src/summary/: mod.rs
src-tauri/src/transcription/: mod.rs
