[package]
name = "hicorder"
version = "0.2.24"
description = "Hicorder — gravador de reuniões com transcrição por IA"
authors = ["hi.capital"]
license = "MIT"
repository = "https://github.com/GeanChu/hicorder"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "hicorder_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[features]
# Liga a captura de áudio do sistema no macOS (ScreenCaptureKit). Off por padrão
# porque a dep transitiva apple-metal quebra o build na CI do GitHub.
macos-system-audio = ["dep:screencapturekit"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset", "tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-notification = "2.3.3"
tauri-plugin-dialog = "2.7.0"
tauri-plugin-autostart = "2"
tauri-plugin-updater = "2.10.0"
tauri-plugin-process = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
cpal = "0.15.3"
hound = "3.5.1"
rusqlite = { version = "0.40.1", features = ["bundled"] }
reqwest = { version = "0.13.4", features = ["blocking", "multipart", "json", "native-tls-vendored"] }
ical = "0.11.0"
chrono = "0.4.45"
chrono-tz = "0.10.4"
rrule = "0.14.0"

[target.'cfg(windows)'.dependencies]
wasapi = "0.23.0"
keyring = { version = "4.1.2", default-features = false, features = ["v1", "windows-native-keyring-store"] }

[target.'cfg(target_os = "macos")'.dependencies]
# macOS guarda as chaves em arquivo (settings), não no keychain — sem keyring aqui.
# Áudio do sistema via ScreenCaptureKit (macOS 13+). Opcional: a dep transitiva
# apple-metal compila Swift contra SDK beta e quebra a CI do GitHub sempre que o
# Xcode default do runner muda. Fica atrás da feature `macos-system-audio` (off
# por padrão) para não derrubar o build do macOS.
screencapturekit = { version = "8.0.0", features = ["macos_13_0"], optional = true }

[target.'cfg(target_os = "linux")'.dependencies]
keyring = { version = "4.1.2", default-features = false, features = ["v1", "zbus-secret-service-keyring-store"] }

